--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -37,6 +37,17 @@
         </init-param>
     </filter>
 
+    // XSS filter
+    <filter>
+        <filter-name>XSSFilter</filter-name>
+        <filter-class>com.cj.xss.XSSFilter</filter-class>
+    </filter>
+
+s
+    <filter-mapping>
+        <filter-name>XSSFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <filter-mapping>
         <filter-name>characterEncodingFilter</filter-name>
